--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "oryx-datasafe---enterprise-e-signature-for-pharma",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -11,12 +11,21 @@
   "dependencies": {
     "lucide-react": "^0.562.0",
     "react": "^19.2.3",
-    "react-dom": "^19.2.3"
+    "react-dom": "^19.2.3",
+    "framer-motion": "^11.15.0",
+    "react-intersection-observer": "^9.14.0",
+    "react-markdown": "^9.0.3",
+    "date-fns": "^4.1.0",
+    "clsx": "^2.1.1"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
     "@vitejs/plugin-react": "^5.0.0",
     "typescript": "~5.8.2",
-    "vite": "^6.2.0"
+    "vite": "^6.2.0",
+    "vite-plugin-compression": "^0.5.1",
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.4.49",
+    "tailwindcss": "^3.4.17"
   }
 }
